# nanornaqtl

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
src/nanornaqtl/: main.py  test.ipynb
src/nanornaqtl/scripts/: calculateModRate.py  callirQTL.py  calliu3auQTL.py  callmodQTL.py  callplQTL.py  getAPA.py  getAPA_nonapadb.py  getIntronRetention.py  getMapRead.py  getPolyAlen.py  mergeModSites.py  parallelModqtlProcessor.py  parallelPlQTLProcessor.py  parallel_iu_3au_qtlProcessor.py  parallelirqtlProcessor.py  pileupRead.py
